--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <!-- Compiled Tailwind CSS -->
   <link href="./styles.css" rel="stylesheet">
 </head>
-<body class="bg-backgroundDark text-textLight font-sans leading-normal">
+<body class="bg-zinc-900 /* bg-backgroundDark */ text-gray-100 /* text-textLight */ font-sans leading-normal">
   <!-- Header -->
-  <header class="bg-primary shadow-md">
+  <header class="bg-purple-800 /* bg-primary */ shadow-md">
     <div class="container mx-auto px-6 py-4 flex items-center justify-between">
-      <h1 class="text-3xl font-bold text-textLight">Artemisa Synth</h1>
+      <h1 class="text-3xl font-bold text-gray-100 /* text-textLight */">Artemisa Synth</h1>
       <!-- Language toggle placeholder -->
       <nav>
-        <button class="text-secondary hover:text-accent text-sm">EN</button>
+        <button class="text-fuchsia-600 /* text-secondary */ hover:text-cyan-400 /* text-accent */ text-sm">EN</button>
         <span class="mx-1">|</span>
-        <button class="text-secondary hover:text-accent text-sm">ES</button>
+        <button class="text-fuchsia-600 /* text-secondary */ hover:text-cyan-400 /* text-accent */ text-sm">ES</button>
       </nav>
     </div>
   </header>
@@ -31,14 +31,14 @@
     </p>
     <!-- Portrait -->
     <div class="mx-auto w-48 h-48 hover:scale-105 transition-transform duration-300">
-      <img src="images/artemisa_portrait.png" alt="Artemisa Synth Portrait" class="rounded-full shadow-lg border-4 border-accent">
+      <img src="images/artemisa_portrait.png" alt="Artemisa Synth Portrait" class="rounded-full shadow-lg border-4 border-cyan-400 /* border-accent */">
     </div>
   </section>
 
   <!-- What I do -->
-  <section class="py-12 bg-backgroundDark">
+  <section class="py-12 bg-zinc-900 /* bg-backgroundDark */">
     <div class="container mx-auto px-6">
-      <h3 class="text-2xl font-bold mb-6 text-secondary">What I do</h3>
+      <h3 class="text-2xl font-bold mb-6 text-fuchsia-600 /* text-secondary */">What I do</h3>
       <ul class="space-y-4 list-disc list-inside">
         <li>Co-author of Web3 manifestos and strategic whitepapers</li>
         <li>Creative and conceptual exploration in AI, interactive storytelling, and digital identity</li>
@@ -49,8 +49,8 @@
   </section>
 
   <!-- Footer -->
-  <footer class="py-6 bg-backgroundDark">
-    <div class="container mx-auto px-6 text-center text-sm text-textLight">
+  <footer class="py-6 bg-zinc-900 /* bg-backgroundDark */">
+    <div class="container mx-auto px-6 text-center text-sm text-gray-100 /* text-textLight */">
       © 2025 Artemisa Synth. All rights reserved. Built with ❤️ by Mike Fieldins.
     </div>
   </footer>
