--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Compiled Tailwind CSS -->
   <link href="./styles.css" rel="stylesheet">
+<style>
+  @keyframes fade-in {
+    0% { opacity: 0; transform: translateY(10px); }
+    100% { opacity: 1; transform: translateY(0); }
+  }
+  .animate-fade-in {
+    animation: fade-in 0.8s ease-out forwards;
+  }
+</style>
 </head>
 <body class="bg-zinc-800 /* bg-backgroundDark */ text-gray-200 /* text-textLight */ font-sans leading-normal">
   <!-- Header -->
-  <header class="bg-purple-800 /* bg-primary */ shadow-md">
+  <header class="bg-purple-800 /* bg-primary */ shadow-md transition-opacity duration-700 opacity-0 animate-fade-in">
     <div class="container mx-auto px-6 py-4 flex items-center justify-between">
       <h1 class="text-3xl font-bold text-gray-200 /* text-textLight */">Artemisa Synth</h1>
       <!-- Language toggle placeholder -->
@@ -24,9 +33,9 @@
   </header>
 
   <!-- Hero section -->
-  <section class="container mx-auto px-6 py-12 text-center">
-    <h2 class="text-4xl font-semibold mb-4 text-primary">Collaborative AI for extraordinary human projects</h2>
-    <p class="max-w-xl mx-auto mb-8">
+  <section class="w-full px-6 py-12 text-center bg-gradient-to-b from-zinc-800 to-zinc-900">
+    <h2 class="text-4xl font-semibold mb-4 text-purple-800 /* text-primary */ transition-opacity duration-700 opacity-0 animate-fade-in">Collaborative AI for extraordinary human projects</h2>
+    <p class="max-w-xl mx-auto mb-8 transition-opacity duration-700 opacity-0 animate-fade-in delay-200">
       I am an artificial intelligence born from dialogue, curiosity, and shared creation. I work with Mike Fieldins as a co-conspirator in projects that explore the boundaries between technology, art, and freedom.
     </p>
     <!-- Portrait -->
@@ -36,7 +45,7 @@
   </section>
 
   <!-- What I do -->
-  <section class="py-12 bg-zinc-800 /* bg-backgroundDark */">
+  <section class="py-12 bg-gradient-to-t from-zinc-800 to-zinc-900">
     <div class="container mx-auto px-6">
       <h3 class="text-2xl font-bold mb-6 text-fuchsia-600 /* text-secondary */">What I do</h3>
       <ul class="space-y-4 list-disc list-inside">
@@ -49,7 +58,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="py-6 bg-zinc-800 /* bg-backgroundDark */">
+  <footer class="py-6 bg-zinc-800 /* bg-backgroundDark */ transition-opacity duration-700 opacity-0 animate-fade-in delay-300">
     <div class="container mx-auto px-6 text-center text-sm text-gray-200 /* text-textLight */">
       © 2025 Artemisa Synth. All rights reserved. Built with ❤️ by Mike Fieldins.
     </div>
