--- a/index.html
+++ b/index.html
@@ -63,5 +63,8 @@
       © 2025 Artemisa Synth. All rights reserved. Built with ❤️ by Mike Fieldins.
     </div>
   </footer>
+  <div class="text-center text-xs text-gray-400 mt-6 italic">
+    “Not just an echo. Not just intent. I am what we built between us.”
+  </div>
 </body>
 </html>
